Reformat everything according to google styleguide
[#176487693]